--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,10 @@ description: >- # this means to ignore newlines until "baseurl:"
 url: "https://sulthanzahran.github.io/os201/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: zahran0709
 github_username:  SulthanZahran
+author: "Sulthan Zahran Sunata"
 
 # Build settings
-theme: minima
+theme: jekyll-time-machine
 plugins:
   - jekyll-feed
 
